--- a/src/sass/components/_modal-ingred.scss
+++ b/src/sass/components/_modal-ingred.scss
@@ -42,7 +42,8 @@
   position: absolute;
   width: 30px;
   height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  // border: 1px solid rgba(0, 0, 0, 0.1);
+  border-style: none;
   background: transparent;
   border-radius: 50%;
   right: 8px;
