--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,16 +1,13 @@
 
   
-  <section class="modal__description visually-hidden">
-    <div class="description__backdrop">
+<section class="modal__description">
+  <div class="description__backdrop">
   <div class="container description">
     <button class="button__close" type="button"><svg width="18" height="18"><use href="./img/sprite.svg#icon-modal-cross"></use></svg></button>
     <h2 class="description__title">Campari</h2>
     <h3 class="description__category">Liqueur</h3>
     <p class="description__characteristic">
-      <span class="description__span">Campari</span> is an Italian alcoholic liqueur, considered an apéritif (20.5%, 21%, 24%,
-      25%, or 28.5% ABV, depending on the country in which it is sold), obtained from the infusion
-      of herbs and fruit (including chinotto and cascarilla) in alcohol and water. It is a bitters,
-      characterised by its dark red colour.
+      <span class="description__span">Campari</span> 
     </p>
     <ul class="description__item">
       <li class="description__list"><span class="description__accent">&#10038</span> Type: Bitters</li>
