add authorithation in firebase

--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -40,4 +40,13 @@
       </li>
     </ul>
   </nav>
+  <button class="signup__btn" type="button" data-authorithation="disable">
+    <svg width="32px" height="32px">
+      <use class="signup__ico--in" href="./img/sprite.svg#icon-key"></use>
+      <use
+        class="signup__ico--out"
+        href="./img/sprite.svg#icon-checkbox-checked"
+      ></use>
+    </svg>
+  </button>
 </div>
