--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,6 +19,34 @@
   display: none;
 }
 
+.signup__btn {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  width: 40px;
+  height: 40px; 
+  border-radius: 4px;
+    &[data-authorithation="enable"]{
+      border: 1px solid #fd5103;
+    }
+    &[data-authorithation="enable"] .signup__ico--in {
+        opacity: 0;
+      }
+    &[data-authorithation="disable"] .signup__ico--in {
+      opacity: 1;       
+    }
+    &[data-authorithation="disable"] .signup__ico--out {
+      opacity: 0;
+    }
+}
+.signup__ico--out{
+  fill: #fd5103;
+}
+.signup__btn--desktop{
+  display: none;
+}
+
+
 .header__burger {
   display: block;
   display: flex;
@@ -296,4 +324,7 @@ input:checked + .slider:before {
     display: flex;
     gap: 60px;
   }
+    .signup__btn--desktop {
+      display: flex;
+    }
 }
