--- a/src/partials/modal-coctails.html
+++ b/src/partials/modal-coctails.html
@@ -21,9 +21,9 @@
                 <div class="image__wrap">
                     <!-- <img
                     class="cocktail__img"
-                    alt="Rum Runner"
-                    src="https://www.thecocktaildb.com/images/media/drink/vqws6t1504888857.jpg"
-                    loading="lazy"
+                    alt=""
+                    src=""
+                    
                     /> -->
                 </div>
                 <div class="recipe__wrapper">
