--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -82,6 +82,13 @@
   width: 100%;
   border: 1px solid #fd5103;
   border-radius: 14px;
+  transition-property: scale(1);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.05);
+  }
 
   @media screen and (min-width: 480px) {
     width: 300px;
@@ -165,6 +172,18 @@
   letter-spacing: 0.02em;
 
   color: #ffffff;
+
+  transition-property: background-color color border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    background: transparent;
+    border: 1px solid #fd5103;
+    border-radius: 4px;
+    color: #fd5103;
+  }
+
   @media screen and (min-width: 768px) {
     width: 160px;
     height: 48px;
@@ -182,15 +201,20 @@
 
 .gallery__btn-add-to-fav {
   margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
+  display: block;
+  text-align: center;
+  // justify-content: center;
+  // align-items: center;
+  // gap: 10px;
 
-  padding: 0;
+  padding: 0 30px 0 0;
   width: 110px;
   height: 39px;
-  background: #ffffff;
+  background: transparent;
+  background-image: url('../img/heart-orng.png');
+  background-repeat: no-repeat;
+  background-position: 74px 10px;
+  background-size: 18px 16px;
   border: 1px solid #fd5103;
   border-radius: 4px;
 
@@ -203,16 +227,26 @@
   letter-spacing: 0.02em;
   color: #fd5103;
 
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    background-color: #fd520317;
+  }
+
   @media screen and (min-width: 768px) {
     width: 123px;
     height: 48px;
-
+    background-position: 88px 13px;
+    background-size: 20px 18px;
     font-size: 20px;
     line-height: 1.2;
   }
 
   @media screen and (min-width: 1200px) {
     width: 141px;
+    background-position: 100px 14px;
   }
 }
 
