--- a/src/sass/components/_modal-coctails.scss
+++ b/src/sass/components/_modal-coctails.scss
@@ -181,9 +181,18 @@
             bottom: 25px;
             right: 28px;
         }
+        transition-property: #FD5103;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         
 }
+.modal__btn:hover {
+    color: #FD5103;
+    background-color: white;
+    border: 2px solid #FD5103;
+    
 
+}
 
 .ingredient__accent {
     color: #000917;
@@ -200,10 +209,7 @@
     }
 }
 
-.cocktail__modal-btn:hover {
 
-   
-}
 
 .instraction__wrap {
     @media (min-width: 768px) {
