Add footer and fix header

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -22,30 +22,29 @@
 .signup__btn {
   display: flex;
   justify-content: center;
-  align-items:center;
+  align-items: center;
   width: 40px;
-  height: 40px; 
+  height: 40px;
   border-radius: 4px;
-    &[data-authorithation="enable"]{
-      border: 1px solid #fd5103;
-    }
-    &[data-authorithation="enable"] .signup__ico--in {
-        opacity: 0;
-      }
-    &[data-authorithation="disable"] .signup__ico--in {
-      opacity: 1;       
-    }
-    &[data-authorithation="disable"] .signup__ico--out {
-      opacity: 0;
-    }
+  &[data-authorithation='enable'] {
+    border: 1px solid #fd5103;
+  }
+  &[data-authorithation='enable'] .signup__ico--in {
+    opacity: 0;
+  }
+  &[data-authorithation='disable'] .signup__ico--in {
+    opacity: 1;
+  }
+  &[data-authorithation='disable'] .signup__ico--out {
+    opacity: 0;
+  }
 }
-.signup__ico--out{
+.signup__ico--out {
   fill: #fd5103;
 }
-.signup__btn--desktop{
+.signup__btn--desktop {
   display: none;
 }
-
 
 .header__burger {
   display: block;
@@ -215,6 +214,9 @@ input:checked + .slider:before {
   line-height: 0.86;
   color: #000000;
   cursor: pointer;
+  &:hover {
+    color: #fd5103;
+  }
 }
 
 .header__nav--desktop {
@@ -236,22 +238,30 @@ input:checked + .slider:before {
   display: flex;
 }
 .nav__item--top {
-  background-color: #fff;
+  background-color: transparent;
   padding: 12px;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.02em;
+  &:hover {
+    background-color: #fd5103;
+    color: #fff;
+  }
 }
 .nav__item--bottom {
-  background-color: #fd5103;
-  color: #fff;
+  background-color: transparent;
+
   padding: 12px;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.02em;
-  border: 1px solid #fd5103;
+
+  &:hover {
+    background-color: #fd5103;
+    color: #fff;
+  }
 }
 
 .header__light {
@@ -324,7 +334,7 @@ input:checked + .slider:before {
     display: flex;
     gap: 60px;
   }
-    .signup__btn--desktop {
-      display: flex;
-    }
+  .signup__btn--desktop {
+    display: flex;
+  }
 }
