--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -51,6 +51,9 @@
 
 .gallery__title {
   margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 493px;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
@@ -211,7 +214,7 @@
   width: 110px;
   height: 39px;
   background: transparent;
-  background-image: url('../img/heart-orng.png');
+  background-image: url('../img/heart-wht.png');
   background-repeat: no-repeat;
   background-position: 74px 10px;
   background-size: 18px 16px;
@@ -227,11 +230,12 @@
   letter-spacing: 0.02em;
   color: #fd5103;
 
-  transition-property: background-color;
+  transition-property: background-color background-image;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
+    background-image: url('../img/heart-orng.png');
     background-color: #fd520317;
   }
 
