--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,63 +15,63 @@
                     <img class="hero__img" src="./img/pictures/desktop/hero_501x580.png" alt="Amaizing cocktail" />
                 </picture>
                 <p class="hero__text">Search your favorite cocktail by ABC</p>
-                <div class="keyboard__list keyboard">
-                    <ul class="first--line ">
+                <div class="keyboard__list keyboard" data-action="keyboard">
+                    <ul class="first--line">
                         <li>
-                            <div class="keyboard--item ">A</div>
+                            <div class="keyboard--item" data-id="a">A</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">B</div>
+                            <div class="keyboard--item" data-id="b">B</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">C</div>
+                            <div class="keyboard--item" data-id="c">C</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">D</div>
+                            <div class="keyboard--item" data-id="d">D</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">E</div>
+                            <div class="keyboard--item" data-id="d">E</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">F</div>
+                            <div class="keyboard--item" data-id="d">F</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">G</div>
+                            <div class="keyboard--item" data-id="d">G</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">H</div>
+                            <div class="keyboard--item" data-id="d">H</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">I</div>
+                            <div class="keyboard--item" data-id="d">I</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">J</div>
+                            <div class="keyboard--item" data-id="d">J</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">K</div>
+                            <div class="keyboard--item" data-id="d">K</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">L</div>
+                            <div class="keyboard--item" data-id="d">L</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">M</div>
+                            <div class="keyboard--item" data-id="d">M</div>
                         </li>
                     </ul>
                     <ul class="second--line">
                         <li>
-                            <div class="keyboard--item">N</div>
+                            <div class="keyboard--item" data-id="d">N</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">O</div>
+                            <div class="keyboard--item" data-id="d">O</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">P</div>
+                            <div class="keyboard--item" data-id="d">P</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">Q</div>
+                            <div class="keyboard--item" data-id="d">Q</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">R</div>
+                            <div class="keyboard--item" data-id="d">R</div>
                         </li>
                         <li>
                             <div class="keyboard--item">S</div>
@@ -118,16 +118,19 @@
                             <div class="keyboard--item">6</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">7</div>
+                            <div class="keyboard--item" data-id="7">7</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">8</div>
+                            <div class="keyboard--item" data-id="8">8</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">9</div>
+                            <div class="keyboard--item" data-id="9">9</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">0</div>
+                            <div class="keyboard--item" data-id="0">0</div>
+                        </li>
+                        <li>
+                            <div class="keyboard--item"></div>
                         </li>
                     </ul>
                 </div>
@@ -135,3 +138,6 @@
             </div>
         </div>
     </section>
+
+
+  
