js search by letter

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -30,92 +30,92 @@
                             <div class="keyboard--item" data-id="d">D</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">E</div>
+                            <div class="keyboard--item" data-id="e">E</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">F</div>
+                            <div class="keyboard--item" data-id="f">F</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">G</div>
+                            <div class="keyboard--item" data-id="g">G</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">H</div>
+                            <div class="keyboard--item" data-id="h">H</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">I</div>
+                            <div class="keyboard--item" data-id="i">I</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">J</div>
+                            <div class="keyboard--item" data-id="j">J</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">K</div>
+                            <div class="keyboard--item" data-id="k">K</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">L</div>
+                            <div class="keyboard--item" data-id="l">L</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">M</div>
+                            <div class="keyboard--item" data-id="m">M</div>
                         </li>
                     </ul>
                     <ul class="second--line">
                         <li>
-                            <div class="keyboard--item" data-id="d">N</div>
+                            <div class="keyboard--item" data-id="n">N</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">O</div>
+                            <div class="keyboard--item" data-id="o">O</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">P</div>
+                            <div class="keyboard--item" data-id="p">P</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">Q</div>
+                            <div class="keyboard--item" data-id="q">Q</div>
                         </li>
                         <li>
-                            <div class="keyboard--item" data-id="d">R</div>
+                            <div class="keyboard--item" data-id="r">R</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">S</div>
+                            <div class="keyboard--item" data-id="s">S</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">T</div>
+                            <div class="keyboard--item" data-id="t">T</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">U</div>
+                            <div class="keyboard--item" data-id="u">U</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">V</div>
+                            <div class="keyboard--item" data-id="v">V</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">W</div>
+                            <div class="keyboard--item" data-id="w">W</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">X</div>
+                            <div class="keyboard--item" data-id="x">X</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">Y</div>
+                            <div class="keyboard--item" data-id="y">Y</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">Z</div>
+                            <div class="keyboard--item" data-id="z">Z</div>
                         </li>
                     </ul>
                     <ul class="third--line">
                         <li>
-                            <div class="keyboard--item">1</div>
+                            <div class="keyboard--item" data-id="1">1</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">2</div>
+                            <div class="keyboard--item" data-id="2">2</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">3</div>
+                            <div class="keyboard--item" data-id="3">3</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">4</div>
+                            <div class="keyboard--item" data-id="4">4</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">5</div>
+                            <div class="keyboard--item" data-id="5">5</div>
                         </li>
                         <li>
-                            <div class="keyboard--item">6</div>
+                            <div class="keyboard--item" data-id="6">6</div>
                         </li>
                         <li>
                             <div class="keyboard--item" data-id="7">7</div>
