Add dark/light teme

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,7 +49,7 @@
     <div class="header__switcher--desktop">
       <span class="header__light">Light</span>
       <label class="switch">
-        <input type="checkbox" />
+        <input data-switcher-desktop type="checkbox" />
         <span class="slider round"></span>
       </label>
       <span class="header__dark">Dark</span>
