--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -1,4 +1,4 @@
-<div class="header__mobil is-hidden">
+<div class="header__mobil light is-hidden">
   <a class="header__logo--mobil logo" href="">
     <img src="./images/Logo.png" alt="logo" class="logo__image" />
   </a>
@@ -10,7 +10,7 @@
   <div class="header__switcher">
     <span class="header__light">Light</span>
     <label class="switch">
-      <input type="checkbox" />
+      <input data-switcher-mobil type="checkbox" />
       <span class="slider round"></span>
     </label>
     <span class="header__dark">Dark</span>
