--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,7 +4,6 @@
   visibility: hidden;
 }
 .section__header {
-  background-color: #fff;
   padding-top: 20px;
   padding-bottom: 30px;
 }
@@ -76,7 +75,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fcfcfc;
   padding: 27px 20px;
 }
 .switch {
@@ -119,7 +117,7 @@
   width: 26px;
   left: 2px;
   bottom: 3px;
-  background-color: white;
+  background-color: #fff;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -169,7 +167,7 @@ input:checked + .slider:before {
   max-width: 288px;
   height: 40px;
   border: 1px solid #fd5103;
-  background-color: #fcfcfc;
+  background-color: transparent;
   border-radius: 4px;
   padding-left: 48px;
 }
@@ -193,7 +191,7 @@ input:checked + .slider:before {
   border: none;
   border-right: 1px solid #fd5103;
   border-radius: 4px 0px 0px 4px / 5px 0px 0px 4px;
-  background-color: #fcfcfc;
+  background-color: transparent;
 }
 .header__nav--desktop {
   display: none;
@@ -212,7 +210,7 @@ input:checked + .slider:before {
   font-weight: 400;
   font-size: 28px;
   line-height: 0.86;
-  color: #000000;
+  color: inherit;
   cursor: pointer;
   &:hover {
     color: #fd5103;
@@ -232,7 +230,7 @@ input:checked + .slider:before {
   border-radius: 4px;
 }
 .nav__links--desktop {
-  transform: translate(69%, 100%);
+  transform: translate(69%, 110%);
 }
 .nav__menu {
   display: flex;
@@ -308,10 +306,10 @@ input:checked + .slider:before {
     left: 20px;
   }
   .form__input {
-    background-color: #fff;
+    background-color: transparent;
   }
   .form__btn {
-    background-color: #fff;
+    background-color: transparent;
   }
   .header__switcher {
     padding-top: 10px;
