--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -57,7 +57,7 @@
   font-size: 22px;
   line-height: 1.91;
   text-align: center;
-  color: #202025;
+  color: inherit;
 
   @media screen and (min-width: 480px) {
     font-size: 27px;
@@ -133,7 +133,7 @@
   font-size: 26px;
   line-height: 1.62;
   text-align: center;
-  color: #202025;
+  color: inherit;
 
   @media screen and (min-width: 768px) {
     margin-bottom: 25px;
