search button for mobile

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -134,6 +134,153 @@
                         </li>
                     </ul>
                 </div>
+                <details class="custom-select">
+                    <summary class="radios">
+                        <input type="radio" name="item" id="default" title="A" checked />
+                        <input type="radio" name="item" id="item1" title="B" />
+                        <input type="radio" name="item" id="item2" title="C" />
+                        <input type="radio" name="item" id="item3" title="D" />
+                        <input type="radio" name="item" id="item4" title="E" />
+                        <input type="radio" name="item" id="item5" title="F" />
+                        <input type="radio" name="item" id="item6" title="G" />
+                        <input type="radio" name="item" id="item7" title="H" />
+                        <input type="radio" name="item" id="item8" title="I" />
+                        <input type="radio" name="item" id="item9" title="J" />
+                        <input type="radio" name="item" id="item10" title="K" />
+                        <input type="radio" name="item" id="item11" title="L" />
+                        <input type="radio" name="item" id="item12" title="M" />
+                        <input type="radio" name="item" id="item13" title="N" />
+                        <input type="radio" name="item" id="item14" title="O" />
+                        <input type="radio" name="item" id="item15" title="P" />
+                        <input type="radio" name="item" id="item16" title="Q" />
+                        <input type="radio" name="item" id="item17" title="R" />
+                        <input type="radio" name="item" id="item18" title="S" />
+                        <input type="radio" name="item" id="item19" title="T" />
+                        <input type="radio" name="item" id="item20" title="U" />
+                        <input type="radio" name="item" id="item21" title="V" />
+                        <input type="radio" name="item" id="item22" title="W" />
+                        <input type="radio" name="item" id="item23" title="X" />
+                        <input type="radio" name="item" id="item24" title="Y" />
+                        <input type="radio" name="item" id="item25" title="Z" />
+                        <input type="radio" name="item" id="item26" title="1" />
+                        <input type="radio" name="item" id="item27" title="2" />
+                        <input type="radio" name="item" id="item28" title="3" />
+                        <input type="radio" name="item" id="item29" title="4" />
+                        <input type="radio" name="item" id="item30" title="5" />
+                        <input type="radio" name="item" id="item31" title="6" />
+                        <input type="radio" name="item" id="item32" title="7" />
+                        <input type="radio" name="item" id="item33" title="8" />
+                        <input type="radio" name="item" id="item34" title="9" />
+                        <input type="radio" name="item" id="item35" title="0" />
+                    </summary>
+                    <ul class="select-list">
+                        <li class="select-item">
+                            <label for="item1">B</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item2">C</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item3">D</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item4">E</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item5">F</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item6">G</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item7">H</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item8">I</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item9">J</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item10">K</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item11">L</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item12">M</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item13">N</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item14">O</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item15">P</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item16">Q</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item17">R</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item18">S</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item19">T</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item20">U</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item21">V</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item22">W</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item23">X</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item24">Y</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item25">Z</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item26">1</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item27">2</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item28">3</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item29">4</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item30">5</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item31">6</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item32">7</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item33">8</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item34">9</label>
+                        </li>
+                        <li class="select-item">
+                            <label for="item35">0</label>
+                        </li>
+                    </ul>
+                </details>
             
             </div>
         </div>
