--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -162,6 +162,10 @@ details {
         display: none;
 }
 }
+.custom-select{
+    margin-right: auto;
+    margin-left: auto;
+}
 
 details[open] {
     z-index: 1;
@@ -232,6 +236,8 @@ summary:after {
     
     summary.radios {
         counter-reset: radios;
+        margin-left: auto;
+        margin-right: auto;
     }
     
     summary.radios:before {
@@ -295,3 +301,14 @@ summary:after {
         .select-list::-webkit-scrollbar-thumb:hover {
             background: #b30000;
         }
+
+.sorry__card{
+    max-width: 280px;
+    width: 100%;
+    height: 308px;
+    @media screen and (min-width: 768px) {
+        width: 345px;
+        height: 380px;
+    }
+ 
+}
