add database data write and remove coctailes

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -255,10 +255,8 @@
 }
 
 .btn__svg-fav {
-  display: block;
-  fill: #fe7031;
-  width: 30px;
-  height: 30px;
+  background-image: url('../img/heart-orng.png');
+  background-color: #fd520317;
 }
 
 // ======= PRELOADER =======
