change auth button styles whith dark theme changes

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -25,6 +25,8 @@
   width: 40px;
   height: 40px;
   border-radius: 4px;
+  border: 1px solid grey;
+  background: transparent;
   &[data-authorithation='enable'] {
     border: 1px solid #fd5103;
   }
@@ -33,9 +35,11 @@
   }
   &[data-authorithation='disable'] .signup__ico--in {
     opacity: 1;
+    fill: grey;
   }
   &[data-authorithation='disable'] .signup__ico--out {
     opacity: 0;
+    
   }
 }
 .signup__ico--out {
