commit add new section

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,8 +5,9 @@
 
 @import './layout/header';
 @import './layout/hero';
-@import './layout/footer';
 @import './layout/main';
+@import './layout/whynot';
+@import './layout/footer';
 
 @import './components/theme-change';
 @import './components/mobile-menu';
