--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,4 +1,8 @@
 .footer {
+  position: absolute;
+  bottom: -110px;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
