--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,21 +1,15 @@
-
-  
 <section class="modal__description">
   <div class="description__backdrop">
-  <div class="container description">
-    <button class="button__close" type="button"><svg width="18" height="18"><use href="./img/sprite.svg#icon-modal-cross"></use></svg></button>
-    <h2 class="description__title">Campari</h2>
-    <h3 class="description__category">Liqueur</h3>
-    <p class="description__characteristic">
-      <span class="description__span">Campari</span> 
-    </p>
-    <ul class="description__item">
-      <li class="description__list"><span class="description__accent">&#10038</span> Type: Bitters</li>
-      <li class="description__list"><span class="description__accent">&#10038</span> Country of origin: Italy</li>
-      <li class="description__list"><span class="description__accent">&#10038</span> Alcohol by volume: 20.5–28.5%</li>
-      <li class="description__list"><span class="description__accent">&#10038</span> Flavour: Bitter, spicy and sweet</li>
-    </ul>
-    <button class="description__favorite button" type="button">Remove from favorite</button>
-  </div>
+    <div class="container description">
+      <button class="button__close" type="button">
+        <svg width="18" height="18">
+          <use href="./img/sprite.svg#icon-modal-cross"></use>
+        </svg>
+      </button>
+      <div class="markup"></div>
+      <button class="description__favorite button" type="button">
+        Remove from favorite
+      </button>
+    </div>
   </div>
 </section>
