--- a/src/sass/components/_modal-ingred.scss
+++ b/src/sass/components/_modal-ingred.scss
@@ -97,6 +97,8 @@
   line-height: 1.75;
   color: #5f6775;
   margin-top: 20px;
+  margin-bottom: 28px;
+  text-align: start;
 
   @media screen and (min-width: 768px) {
     margin-top: 68px;
