--- a/src/partials/modal-coctails.html
+++ b/src/partials/modal-coctails.html
@@ -18,13 +18,7 @@
           with large ice cubes. Garnish with an orange peel.
         </p>
       </div>
-      <div class="image__wrap">
-        <!-- <img
-                    class="cocktail__img"
-                    <!-- alt=""
-                    src="./img/pictures/ACID.jpg" -->
-        /> -->
-      </div>
+      <div class="image__wrap"></div>
       <div class="ingredients__wraper">
         <div class="recipe__wrapper">
           <h2 class="cocktail__name cocktail__name--big">Negroni</h2>
