fixed ingridient modal

--- a/src/partials/modal-coctails.html
+++ b/src/partials/modal-coctails.html
@@ -1,4 +1,4 @@
-<div class="backdrop__cocktail is hidden" data-modal>
+<div class="backdrop__cocktail visually-hidden" data-modal>
   <div class="modal__cocktail">
     <button type="button" class="btn--close" data-modal="close-cocktail">
       <svg width="32" height="32" data-modal="close-cocktail">
