--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -17,8 +17,8 @@
        
         
     }
-
-
+  }
+.hero__keyboard{
   position: relative;
   width: 100%;
   padding-top: 30px;
@@ -174,18 +174,8 @@
         font-size: 24px;
     
     }
+}
 
-
-    color: #5f6775;
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: 40px;
-    height: 40px;
-
-    font-weight: 700;
-    font-size: 24px;
-  }
 }
 .keyboard--item:hover,
 .keyboard--item:focus {
