--- a/src/sass/favorite/_favorite.scss
+++ b/src/sass/favorite/_favorite.scss
@@ -192,21 +192,29 @@
 .f-ing_btn-rem {
   padding: 0;
   margin: 0;
+  display: block;
+  text-align: center;
+  // justify-content: center;
+  // align-items: center;
+  // gap: 10px;
+
+  padding: 0 30px 0 0;
   width: 110px;
   height: 39px;
-  background: #ffffff;
+  background: transparent;
+  background-image: url('../img/heart-wht.png');
+  background-repeat: no-repeat;
+  background-position: 74px 10px;
+  background-size: 18px 16px;
   border: 1px solid #fd5103;
   border-radius: 4px;
 
-  align-items: center;
-  justify-content: center;
-  display: flex;
   transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 
   &:hover,
   &:focus {
-    background-color: #fd5103;
-    color: #ffffff;
+    background-image: url('../img/heart-orng.png');
+    background-color: #fd520317;
     outline: none;
   }
 
@@ -225,9 +233,14 @@
 
     font-size: 20px;
     line-height: 1.2;
+    background-position: 88px 13px;
+    background-size: 20px 18px;
+    font-size: 20px;
+    line-height: 1.2;
   }
 
   @media screen and (min-width: 1280px) {
     width: 141px;
+    background-position: 100px 14px;
   }
 }
