change color in black theme

--- a/src/sass/favorite/_favorite-cocktails.scss
+++ b/src/sass/favorite/_favorite-cocktails.scss
@@ -1,7 +1,7 @@
 ul {
     padding: 0;
 }
-.fav__wrapper{
+.fav__wrapper {
     padding-bottom: 60px;
 }
 
@@ -11,7 +11,7 @@ ul {
     font-weight: 600;
     font-size: 22px;
     line-height: 1.9;
-    color: black;
+    color: inherit;
     margin: 0;
     padding: 0;
     text-align: center;
