--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -281,7 +281,21 @@
                         </li>
                     </ul>
                 </details>
-            
+                <div class="sorry__card visually-hidden">
+                    <h2 class="sorry__title">Sorry, we didn't find any cocktail for you</h2>
+                    <picture>
+                        <source srcset="./img/pictures/desktop/empty_page_345x380.png" media="(min-width:1280px)" />
+                        <source srcset="./img/pictures/desktop/empty_page_690x760@2x.png" media="(min-width:1280px)" />
+                    
+                        <source srcset="./img/pictures/tablet/empty_page_345x381.png" media="(min-width:768px)" />
+                        <source srcset="./img/pictures/tablet/empty_page_690x762@2x.png" media="(min-width:768px)" />
+                    
+                        <source srcset="./img/pictures/mobile/empty_page_280x308.png" media="(min-width:480px)" />
+                        <source srcset="./img/pictures/mobile/empty_page_560x617@2x.png" media="(min-width:480px)" />
+                    
+                        <img class="sorry__img" src="./img/pictures/desktop/empty_page_345x380.png" alt="Apologise card" />
+                    </picture>
+                </div>
             </div>
         </div>
     </section>
