--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -347,13 +347,39 @@ summary:after {
         }
 
 .sorry__card{
-    max-width: 280px;
-    width: 100%;
+ 
+}
+
+.sorry__title{
+  min-width: 280px;
+  width: 100%;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1.91;
+  text-align: center;
+  color: #202025;
+  @media screen and (min-width: 768px) {
+    width: 331px;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.31;
+    
+  }
+    @media screen and (min-width: 1280px) {
+      width: 493px;
+      font-size: 48px;
+      line-height: 1.5;
+    
+    }
+
+}
+.sorry__img{
+    width: 280px;
     height: 308px;
     @media screen and (min-width: 768px) {
         width: 345px;
         height: 380px;
     }
- 
+    
 }
 
