--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -5,24 +5,12 @@
     padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
-
-    @media screen and (min-width: 768px) {
-        padding-top: 102px;
-        padding-bottom: 164px;
-   
-    }
-        
-    @media screen and (min-width: 1280px) {
-        padding-top: 67px;
-       
-        
-    }
   }
 .hero__keyboard{
   position: relative;
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 20px;
+  // padding-top: 30px;
+  // padding-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
 
