Add some chenges for dark/light theme.Fix footer bug and  search bug

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -31,8 +31,10 @@ button {
 .light {
   background-color: #fcfcfc;
   color: #202025;
+  fill: #202025;
 }
 .dark {
   background-color: #202025;
   color: #fcfcfc;
+  fill: #fcfcfc;
 }
