--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -27,6 +27,7 @@
   border-radius: 4px;
   border: 1px solid grey;
   background: transparent;
+  margin-bottom: 30px;
   &[data-authorithation='enable'] {
     border: 1px solid #fd5103;
   }
@@ -39,7 +40,6 @@
   }
   &[data-authorithation='disable'] .signup__ico--out {
     opacity: 0;
-    
   }
 }
 .signup__ico--out {
@@ -70,7 +70,7 @@
   right: 20px;
 }
 .burger__img {
-  fill: #000;
+  fill: inherit;
 }
 .header__mobil {
   position: absolute;
@@ -174,6 +174,9 @@ input:checked + .slider:before {
   background-color: transparent;
   border-radius: 4px;
   padding-left: 48px;
+  transition-property: outline;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form__input::placeholder {
   color: #5f6775;
@@ -216,6 +219,9 @@ input:checked + .slider:before {
   line-height: 0.86;
   color: inherit;
   cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     color: #fd5103;
   }
@@ -246,6 +252,9 @@ input:checked + .slider:before {
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.02em;
+  transition-property: background-color color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover {
     background-color: #fd5103;
     color: #fff;
@@ -259,6 +268,9 @@ input:checked + .slider:before {
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.02em;
+  transition-property: background-color color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
     background-color: #fd5103;
@@ -320,6 +332,9 @@ input:checked + .slider:before {
   }
 }
 @media screen and (min-width: 1280px) {
+  .signup__btn {
+    margin-bottom: 0;
+  }
   .header__logo--mobil {
     display: none;
   }
