--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -6,7 +6,7 @@
   padding-top: 20px;
   padding-bottom: 10px;
   width: 100%;
-  height: 500px;
+  min-height: 500px;
 
   @media screen and (min-width: 480px) {
     width: 480px;
