--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -214,7 +214,7 @@
   width: 110px;
   height: 39px;
   background: transparent;
-  background-image: url('../img/heart-wht.png');
+  background-image: url('../img/heart-empty.png');
   background-repeat: no-repeat;
   background-position: 74px 10px;
   background-size: 18px 16px;
