--- a/src/sass/components/_modal-coctails.scss
+++ b/src/sass/components/_modal-coctails.scss
@@ -61,17 +61,41 @@
 }
 
 .btn--close {
-    fill: #202025;
-    background-color: #0000;
+    width: 40px;
+    height: 40px;
+    background:transparent;
     border: #0000;
-    justify-content: flex-end;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     margin-left: auto;
     padding: 0;
     display: flex;
     position: absolute;
     top: 12px;
     right: 12px;
+    & {
+            cursor: pointer;
+            position: absolute;
+            top: 20px;
+            left: 10px;
+        }
+    
+        &:before,
+        &:after {
+            content: "";
+            position: absolute;
+            width: 24px;
+            height: 1px;
+            background: black;
+        }
+    
+        &:before {
+            transform: rotate(45deg);
+        }
+    
+        &:after {
+            transform: rotate(-45deg);
+        }
 }
 
 .cocktail__name {
@@ -280,6 +304,7 @@
     }
 }
 
-.ingredient-link:hover {
-    color:#FD5103
+.ingredient__item:hover,.ingredient-link:hover {
+    color:#FD5103;
+    cursor:pointer;
 }
