add apologise card

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -2,15 +2,13 @@
 
     width: 100%;
     padding-top: 30px;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
   }
 .hero__keyboard{
   position: relative;
   width: 100%;
-  // padding-top: 30px;
-  // padding-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
 
@@ -46,25 +44,10 @@
         top: 7px;
         right: 0;
     }
-
-  margin-bottom: 28px;
-
-  @media screen and (min-width: 768px) {
-    position: absolute;
-    top: 38px;
-    right: 32px;
-    z-index: 5;
-  }
-
-  @media screen and (min-width: 1280px) {
-    top: 7px;
-    right: 16px;
-  }
-
 }
 
 .hero__title {
-  width: 300px;
+  max-width: 688px;
   margin-bottom: 28px;
 
   font-weight: 600;
@@ -72,14 +55,10 @@
   line-height: 1.91;
   color: #fd5103;
 
+  @media screen and (min-width: 480px) {
+    width: 300px;
 
-    @media screen and (min-width: 1280px) {
-        width: 688px;
-            font-weight: 600;
-            font-size: 52px;
-            line-height: 1.54;
-           
-        }
+  }
 
   @media screen and (min-width: 768px) {
     width: 336px;
@@ -99,7 +78,7 @@
 }
 
 .hero__text {
-  width: 280px;
+  max-width: 607px;
   margin-bottom: 20px;
 
   font-weight: 500;
@@ -110,6 +89,11 @@
   color: inherit;
   opacity: 0.8;
 
+  @media screen and (min-width: 480px) {
+      width: 280px;
+  
+    }
+
   @media screen and (min-width: 768px) {
     width: 324px;
     margin-bottom: 40px;
@@ -117,7 +101,6 @@
   }
 
   @media screen and (min-width: 1280px) {
-    width: 607px;
     font-size: 18px;
     line-height: 1.56;
   }
@@ -197,6 +180,7 @@ details {
 .custom-select{
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 20px;
 }
 
 details[open] {
@@ -332,39 +316,16 @@ summary:after {
         
         .select-list::-webkit-scrollbar-thumb:hover {
             background: #b30000;
-        }
-
-
-.sorry__title{
-  min-width: 280px;
-  width: 100%;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 1.91;
-  text-align: center;
-  color: #202025;
-  @media screen and (min-width: 768px) {
-    width: 331px;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 1.31;
-    
-  }
-    @media screen and (min-width: 1280px) {
-      width: 493px;
-      font-size: 48px;
-      line-height: 1.5;
-    
     }
 
-}
-.sorry__img{
-    width: 280px;
-    height: 308px;
-    @media screen and (min-width: 768px) {
-        width: 345px;
-        height: 380px;
-    }
+// .sorry__img{
+//     width: 280px;
+//     height: 308px;
+//     text-align: center;
+//     @media screen and (min-width: 768px) {
+//         width: 345px;
+//         height: 380px;
+//     }
     
-}
+// }
 
