--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -316,3 +316,54 @@
 .loaded .preloader {
   display: none;
 }
+
+.sorry__title {
+  margin-bottom: 63px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 493px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1.91;
+  text-align: center;
+  color: #202025;
+
+  @media screen and (min-width: 480px) {
+    font-size: 27px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 1.31;
+    margin-bottom: 62px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 48px;
+    line-height: 1.5;
+    margin-bottom: 70px;
+    padding-top: 58px;
+   
+  }
+}
+
+.sorry__img {
+  max-width: 345px;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 48px;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 0;
+
+  }
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 28px;
+    }
+
+
+}
