Fix bug & add animation to footer

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -41,3 +41,18 @@ button {
 body.disable-scroll {
   overflow: hidden;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #bbbbbb;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #fe7031;
+}
