--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -222,7 +222,8 @@ input:checked + .slider:before {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover {
+  &:hover,
+  &:focus {
     color: #fd5103;
   }
 }
@@ -255,7 +256,8 @@ input:checked + .slider:before {
   transition-property: background-color color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #fd5103;
     color: #fff;
   }
@@ -272,7 +274,8 @@ input:checked + .slider:before {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: #fd5103;
     color: #fff;
   }
