bugs fixed custom-keyboard

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,14 +1,11 @@
 .hero {
-
     width: 100%;
     padding-top: 30px;
-    // padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
   }
 .hero__keyboard{
-  position: relative;
-  width: 100%;
+  position: relative; 
   margin-left: auto;
   margin-right: auto;
 
@@ -21,12 +18,6 @@
     padding-top: 67px;
   }
 
-}
-.hero__keyboard{
-    position: relative;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .hero__img {
@@ -101,6 +92,7 @@
   }
 
   @media screen and (min-width: 1280px) {
+    width: 607px;
     font-size: 18px;
     line-height: 1.56;
   }
@@ -118,6 +110,7 @@
   }
 
 }
+
 
 .keyboard--item {
   @media screen and (min-width: 768px) {
@@ -153,8 +146,9 @@
   color: #fd5103;
 }
 
-.keyboard--item--black{
-    color: #202025;
+.keyboard--item---black {
+  color: #202025;
+
 }
 
 .first--line,
@@ -168,7 +162,6 @@
 }
 
 
-
 details {
     position: relative;
     width: 300px;
@@ -178,8 +171,6 @@ details {
 }
 }
 .custom-select{
-    margin-right: auto;
-    margin-left: auto;
     margin-bottom: 20px;
 }
 
@@ -187,6 +178,8 @@ details[open] {
     z-index: 1;
 }
 summary {
+    margin-right: auto;
+    margin-left: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -252,8 +245,8 @@ summary:after {
     
     summary.radios {
         counter-reset: radios;
-        margin-left: auto;
-        margin-right: auto;
+        // margin-left: auto;
+        // margin-right: auto;
     }
     
     summary.radios:before {
@@ -285,7 +278,8 @@ summary:after {
         background: #fff;
         position: absolute;
         top: 100%;
-        left: 0;
+        left: 50%;
+        transform: translate(-50%);
         padding: 0;
         margin: 0;
         border: 1px solid #fd5103;
